--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,42 @@
 body {
   background-color: #191765;
-  margin: 30px;
+  margin: 0;
   padding: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
 @media only screen and (min-width: 375px) {
   /* Header Styling */
   .navbar {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
     color: white;
+    position: relative;
+    top: 43px;
+    justify-content: space-around;
+    margin-left: -28px;
+  }
+
+  .header-name {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+  }
+
+  .hamburger-menu {
+    position: relative;
+    left: 103px;
   }
 
   /* Introduction Styling */
 
   .introduction-image {
-    position: relative;
-    top: -60px;
-    left: -31px;
+    background-image: url(images/Ellipse18.svg);
+    margin: 0;
+    margin-left: 0;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 225px;
+    position: absolute;
   }
 
   .introduction {
@@ -31,35 +49,36 @@ body {
   }
 
   .introduction-name {
-    margin: 30px;
     color: #7d73fc;
     font-size: 48px;
     position: relative;
-    top: -266px;
-    left: 17px;
     text-align: center;
+    margin-top: 94px;
+    left: 46px;
   }
 
   .soft-developer {
-    margin: 1px;
     color: white;
     position: relative;
-    top: -283px;
+    top: -37px;
     font-size: 32px;
+    left: 38px;
   }
 
   .intro-paragraph {
     margin: 0;
     color: #c8c8d4;
     position: relative;
-    top: -206px;
+    top: -25px;
     font-size: 20px;
-    line-height: 1.5;
+    line-height: 2;
+    right: -38px;
   }
 
   .intro-line {
     position: relative;
-    top: -164px;
+    left: 53px;
+    top: 24px;
   }
 
   /* Experience Styling */
@@ -68,17 +87,23 @@ body {
     display: flex;
     flex-direction: column;
     align-items: stretch;
+    position: relative;
+  }
+
+  .experience-image {
+    background-image: url(images/Ellipse19.svg);
+    background-repeat: no-repeat;
+    width: 23%;
+    height: 144px;
+    position: absolute;
+    right: -82px;
+    top: 82px;
   }
 
   .language {
     display: flex;
     justify-content: space-evenly;
-    margin-top: -161px;
-  }
-
-  .experience-img {
-    margin-left: 300px;
-    margin-top: -177px;
+    margin-top: 59px;
   }
 
   .list-text {
@@ -89,7 +114,7 @@ body {
   }
 
   .skills-align {
-    margin-left: 34px;
+    margin-left: 57px;
   }
 
   .lang-align {
@@ -98,5 +123,10 @@ body {
 
   .experience-heading {
     color: #9490ff;
+  }
+
+  .experience-line {
+    position: relative;
+    right: -13px;
   }
 }
